--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -52,3 +52,19 @@ body {
 }
 
 
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+  color: transparent;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
+}
