--- a/views/account.hbs
+++ b/views/account.hbs
@@ -6,21 +6,21 @@
 </div>
 
 <form action="/account/submit" method="post" class="form">
-
-    <label><b>Username</b></label>
+    <div class="formcontainer">
+    <label>Username</label>
     <input type="text" placeholder="Enter Username" name="username"required>
 
-    <label><b>Password</b></label>
+    <label>Password</label>
     <input type="password" placeholder="Enter Password" name="userpw"required>
 
     <button type="submit"> Login </button>
     <div>
-        <label>
+        <label class="rmb">
             <input type="checkbox" checked="checked" name="remember"> Remember me
         </label>
         <span class="psw">Forgot <a href="#">password?</a></span>
     </div>
-
+    </div>
 </form>
 <div class="container">
     <button type="button" class="registerbtn">  <a href="/register"> Not registered yet? </a> </button>
