--- a/views/account.hbs
+++ b/views/account.hbs
@@ -4,7 +4,7 @@
     <button class="tablinks"> About </button>
     <button class="tablinks"> <a href="/contact"> Contact </a></button>
 </div>
-
+<h2> Hi you - feel free to sign up or in </h2>
 <form action="/account/submit" method="post" class="form">
     <div class="formcontainer">
     <label>Username</label>
