--- a/views/community.hbs
+++ b/views/community.hbs
@@ -3,7 +3,10 @@
     <button class="tablinks"> <a href="/account"> Account </a> </button>
     <button class="tablinks"> <a href="/community"> Community  </a> </button>
 </div>
-<form action="/logout" method="post">
-    <button class="tablinks"> Logout </a> </button>
-</form>
+
 {{communitylist}}
+
+
+<form action="/logout" method="post">
+    <button class="logoutbttn"> Logout </button>
+</form>
