--- a/views/statistics.hbs
+++ b/views/statistics.hbs
@@ -4,9 +4,7 @@
     <button class="tablinks"> <a href="/community"> Community  </a> </button>
 
 </div>
-<form action="/logout" method="post">
-    <button class="tablinks"> Logout </a> </button>
-</form>
+
 <div class="training">
     <h2>Your training progress</h2>
 </div>
@@ -14,3 +12,7 @@
 <div class="weight">
     <h2>Your weight progress</h2>
 </div>
+
+<form action="/logout" method="post">
+    <button class="logoutbttn"> Logout </button>
+</form>
