--- a/public/stylesheets/register.css
+++ b/public/stylesheets/register.css
@@ -13,7 +13,7 @@ input[type=text],input[type=password], input[type=date], select, textarea {
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: white;
     font-family: "Helvetica Neue";
     border-radius: 25px;
     color: black;
@@ -37,9 +37,11 @@ label{
     font-family: "Helvetica";
     font-size: 15px;
 }
+
+
 .container {
-    border-radius: 5px;
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 25px;
     padding: 20px;
     top: 50%;
     left: 50%;
