--- a/views/account.hbs
+++ b/views/account.hbs
@@ -5,23 +5,25 @@
     <button class="tablinks"> <a href="/contact"> Contact </a></button>
 </div>
 <h2> Hi you - feel free to sign up or in </h2>
-<form action="/account/submit" method="post" class="form">
-    <div class="formcontainer">
-    <label>Username</label>
-    <input type="text" placeholder="Enter Username" name="username"required>
+<div class="signupcontainer">
+    <form action="/account/submit" method="post" class="form">
 
-    <label>Password</label>
-    <input type="password" placeholder="Enter Password" name="userpw"required>
+        <label>Username</label>
+        <input type="text" placeholder="Enter Username" name="username"required>
 
-    <button type="submit"> Login </button>
-    <div>
-        <label class="rmb">
-            <input type="checkbox" checked="checked" name="remember"> Remember me
-        </label>
-        <span class="psw">Forgot <a href="#">password?</a></span>
-    </div>
-    </div>
-</form>
-<div class="container">
+        <label>Password</label>
+        <input type="password" placeholder="Enter Password" name="userpw"required>
+
+        <button type="submit"> Login </button>
+        <div>
+            <label class="rmb">
+                <input type="checkbox" checked="checked" name="remember"> Remember me
+            </label>
+            <div class="psw">Forgot <a href="#">password?</a></div>
+        </div>
+
+    </form>
+</div>
+<div class="registercontainer">
     <button type="button" class="registerbtn">  <a href="/register"> Not registered yet? </a> </button>
 </div>
