Layout for every forM!

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" type="text/css" href='/stylesheets/contact.css'>
 <div class="tab">
-    <button class="tablinks"> <a href="/account"> Login </a> </button>
+    <button class="tablinks"> <a href="/"> Home </a> </button>
     <button class="tablinks"> <a href="/"> About  </a> </button>
     <button class="tablinks"> <a href="/contact"> Contact </a> </button>
 </div>
