--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,3 +8,8 @@
 <p>Welcome to {{title}}</p>
 <p> {{text}}</p>
 
+<div>
+    {{#each languages}}
+        <p>{{@index}}. {{this}}</p>
+    {{/each}}
+</div>
