--- a/views/useraccount.hbs
+++ b/views/useraccount.hbs
@@ -6,9 +6,9 @@
 
 
 
-
-<h1> Hi {{output}}</h1>
-
+<div id="designtest">
+<h1> Hi {{output}} {{usertestname}}</h1>
+</div>
 
     <div class="trainingscontainer">
     <h2>Did you have a training session?</h2>
