--- a/views/community.hbs
+++ b/views/community.hbs
@@ -3,8 +3,20 @@
     <button class="tablinks"> <a href="/account"> Account </a> </button>
     <button class="tablinks"> <a href="/community"> Community  </a> </button>
 </div>
+<p>{{test}}</p>
+<ul>
+    {{#each humans}}
+        <li><a href="/humans/{{id}}">{{name}}</a></li>
+    {{/each}}
+</ul>
 
-{{communitylist}}
+<ul>
+    {{#each test2}}
+        <li>{{userName}} in {{city}}</li>
+    {{/each}}
+</ul>
+
+
 
 
 <form action="/logout" method="post">
