Handlebars view game conquered!

--- a/views/community.hbs
+++ b/views/community.hbs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" type="text/css" href='/stylesheets/community.css'>
 <div class="tab">
-    <button class="tablinks"> <a href="/account"> Account </a> </button>
+    <button class="tablinks"> <a href="/useraccount"> Account </a> </button>
     <button class="tablinks"> <a href="/community"> Community  </a> </button>
 </div>
 <p>{{test}}</p>
