--- a/views/statistics.hbs
+++ b/views/statistics.hbs
@@ -14,7 +14,7 @@
 
     <ul>
         {{#each weighttest}}
-            <li>{{weightKG}}</li>
+            <li>{{weightKG}} kg at  {{weightDate}}</li>
         {{/each}}
     </ul>
 
