--- a/views/statistics.hbs
+++ b/views/statistics.hbs
@@ -7,6 +7,13 @@
 
 <div class="training">
     <h2>Your training progress</h2>
+
+    <ul>
+        {{#each trainingstest}}
+            <li>{{description}} <br>  at {{startTime}} {{startDate}}</li>
+        {{/each}}
+    </ul>
+
 </div>
 
 <div class="weight">
