added about page

--- a/views/community.hbs
+++ b/views/community.hbs
@@ -12,7 +12,7 @@
 
 <ul>
     {{#each test2}}
-        <li>{{userName}} in {{city}}</li>
+        <li><a href="/statistics/{{id}}">{{userName}}</a> in {{city}}</li>
     {{/each}}
 </ul>
 
