--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href='/stylesheets/contact.css'>
 <div class="tab">
     <button class="tablinks"> <a href="/"> Home </a> </button>
-    <button class="tablinks"> <a href="/"> About  </a> </button>
+    <button class="tablinks"> <a href="/about"> About </a> </button>
     <button class="tablinks"> <a href="/contact"> Contact </a> </button>
 </div>
 <h1>Elisa</h1>
