--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href='/stylesheets/register.css'>
 <div class="tab">
     <button class="tablinks"> <a href="/"> Home </a> </button>
-    <button class="tablinks"> About </button>
+    <button class="tablinks"> <a href="/about"> About </a> </button>
     <button class="tablinks"> <a href="/contact"> Contact </a> </button>
 </div>
 <h2>Register now and join our community</h2>
