--- a/views/account.hbs
+++ b/views/account.hbs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href='/stylesheets/account.css'>
 <div class="tab">
     <button class="tablinks"> <a href="/"> Home </a> </button>
-    <button class="tablinks"> About </button>
+    <button class="tablinks"> <a href="/about"> About </a> </button>
     <button class="tablinks"> <a href="/contact"> Contact </a></button>
 </div>
 <h2> Hi you - feel free to sign up or in </h2>
