--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <div class="tab">
     <button class="tablinks"> <a href="/account"> Account </a> </button>
-    <button class="tablinks"> About </button>
-    <button class="tablinks"> Contact </button>
+    <button class="tablinks"> <a href="/about"> About </a> </button>
+    <button class="tablinks"> <a href="/contact"> Contact </a> </button>
 </div>
 
 <h1>{{title}} {{displaytest}}</h1>
