new community individual pages

--- a/views/community.hbs
+++ b/views/community.hbs
@@ -3,16 +3,10 @@
     <button class="tablinks"> <a href="/useraccount"> Account </a> </button>
     <button class="tablinks"> <a href="/community"> Community  </a> </button>
 </div>
-<p>{{test}}</p>
-<ul>
-    {{#each humans}}
-        <li><a href="/humans/{{id}}">{{name}}</a></li>
-    {{/each}}
-</ul>
 
 <ul>
     {{#each test2}}
-        <li><a href="/statistics/{{id}}">{{userName}}</a> in {{city}}</li>
+        <li><a href="/communityuser/{{id}}">{{userName}}</a> in {{city}}</li>
     {{/each}}
 </ul>
 
