--- a/public/stylesheets/community.css
+++ b/public/stylesheets/community.css
@@ -14,3 +14,22 @@
 .logoutbttn:hover {
     background-color: #AF191C;
 }
+
+h1{
+    text-align: center;
+    font-family: "Helvetica Neue";
+    font-weight: 400;
+}
+ul {
+    list-style: none;
+}
+
+li{
+    margin: 20px auto;
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 25px;
+    padding: 10px;
+    border-color: white;
+    max-width: 600px;
+
+}
