--- a/views/community.hbs
+++ b/views/community.hbs
@@ -1,9 +1,9 @@
 <link rel="stylesheet" type="text/css" href='/stylesheets/community.css'>
 <div class="tab">
     <button class="tablinks"> <a href="/useraccount"> Account </a> </button>
-    <button class="tablinks"> <a href="/community"> Community  </a> </button>
+    <button class="tablinks"> <a href="/statistics"> Statistics  </a> </button>
 </div>
-
+<h1> Look at our members</h1>
 <ul>
     {{#each test2}}
         <li><a href="/communityuser/{{id}}">{{userName}}</a> in {{city}}</li>
@@ -13,6 +13,3 @@
 
 
 
-<form action="/logout" method="post">
-    <button class="logoutbttn"> Logout </button>
-</form>
