--- a/views/useraccount.hbs
+++ b/views/useraccount.hbs
@@ -7,7 +7,7 @@
 
 
 <div id="designtest">
-<h1> Hi {{output}} {{usertestname}}</h1>
+<h1> Hi do you want to add something to your diary?</h1>
 </div>
 
     <div class="trainingscontainer">
