--- a/views/register.hbs
+++ b/views/register.hbs
@@ -7,6 +7,7 @@
 <h2>Register now and join our community</h2>
 <div class="container">
     <form action="/register/submit" method="post">
+        <input type="hidden" name="_csrf" value="{{csrfToken}}">
         <label for="regname">Username</label>
         <input type="text" name="regname" required placeholder="Your Username..">
 
@@ -17,9 +18,11 @@
         <input type="text" name="city" required placeholder="Your City..">
 
         <label for="birthday">Birthday</label>
-        <input type="date" name="birthday" required> </input>
+        <input type="date" name="birthday" required>
 
         <input type="submit" value="Register">
+
+
     </form>
 </div>
 
